m5 file for apache-tomcat

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 * text=auto !eol
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip -text
+techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip.md5 -text
