--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 * text=auto !eol
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip -text
-techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip.md5 -text
+techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip.MD5 -text
