--- a/.gitattributes
+++ b/.gitattributes
@@ -15,5 +15,7 @@ techstack-2006/os-indepenent/jakarta-tomcat-5.0.28.zip -text
 techstack-2006/os-indepenent/jakarta-tomcat-5.0.28.zip.MD5 -text
 techstack-2006/os-indepenent/jboss-4.0.4.GA.zip -text
 techstack-2006/os-indepenent/jboss-4.0.4.GA.zip.MD5 -text
+techstack-2006/os-indepenent/ws-core-enum-4.0.3.zip -text
+techstack-2006/os-indepenent/ws-core-enum-4.0.3.zip.MD5 -text
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip -text
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip.MD5 -text
