--- a/.gitattributes
+++ b/.gitattributes
@@ -17,5 +17,7 @@ techstack-2006/os-indepenent/jboss-4.0.4.GA.zip -text
 techstack-2006/os-indepenent/jboss-4.0.4.GA.zip.MD5 -text
 techstack-2006/os-indepenent/ws-core-enum-4.0.3.zip -text
 techstack-2006/os-indepenent/ws-core-enum-4.0.3.zip.MD5 -text
+techstack-2007/os-indepenent/apache-ant-1.7.0-bin.zip -text
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip -text
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip.MD5 -text
+techstack-2007/os-indepenent/jsch-0.1.34.jar -text
