--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,4 @@ techstack-2007/os-indepenent/apache-ant-1.7.0-bin.zip -text
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip -text
 techstack-2007/os-indepenent/apache-tomcat-5.5.20.zip.MD5 -text
 techstack-2007/os-indepenent/jsch-0.1.34.jar -text
+techstack-2007/windows/jdk-1_5_0_10-windows-i586-p.exe -text
