--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto !eol
+other/os-independent/findbugs-1.3.4.zip -text
 other/os-independent/hudson/build-timeout.hpi -text
 other/os-independent/hudson/checkstyle.hpi -text
 other/os-independent/hudson/cobertura.hpi -text
