--- a/.gitattributes
+++ b/.gitattributes
@@ -26,5 +26,6 @@ techstack-2007/linux/jdk-1_5_0_10-linux-i586.bin -text
 techstack-2007/os-independent/apache-ant-1.7.0-bin.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip.MD5 -text
+techstack-2007/os-independent/jboss-4.0.5-GA.zip -text
 techstack-2007/os-independent/jsch-0.1.34.jar -text
 techstack-2007/windows/jdk-1_5_0_10-windows-i586-p.exe -text
