--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 other/os-independent/class-dependecy-analyzer/pf-cda-1.10.zip -text
 other/os-independent/findbugs-1.3.4.zip -text
+other/os-independent/grails/grails-bin-1.0.2.zip -text
 other/os-independent/grails/grails-bin-1.0.3.zip -text
 other/os-independent/hudson/build-timeout.hpi -text
 other/os-independent/hudson/checkstyle.hpi -text
