--- a/.gitattributes
+++ b/.gitattributes
@@ -34,4 +34,5 @@ techstack-2007/os-independent/jems-installer-1.2.0.GA.jar -text
 techstack-2007/os-independent/jems-installer-1.2.0.GA.jar.MD5 -text
 techstack-2007/os-independent/jsch-0.1.34.jar -text
 techstack-2007/windows/jdk-1_5_0_10-windows-i586-p.exe -text
+techstack-2007/windows/mysql-5.0.27-win32.zip -text
 techstack-2008/windows/postgresql-8.3.3-1.zip -text
