Maven binary distribution
Former-commit-id: 63374a00682ec809ea9543a55ede7cb902a0112e

--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,7 @@ techstack-2006/os-independent/ws-core-enum-4.0.3.zip -text
 techstack-2006/os-independent/ws-core-enum-4.0.3.zip.MD5 -text
 techstack-2007/linux/jdk-1_5_0_10-linux-i586.bin -text
 techstack-2007/os-independent/apache-ant-1.7.0-bin.zip -text
+techstack-2007/os-independent/apache-maven-2.0.8-bin.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip.MD5 -text
 techstack-2007/os-independent/jboss-4.0.5.GA.zip -text
