--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,7 @@ techstack-2007/os-independent/apache-maven-2.0.8-bin.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip.MD5 -text
 techstack-2007/os-independent/jboss-4.0.5.GA-jboss.zip -text
+techstack-2007/os-independent/jboss-4.0.5.GA-jboss.zip.MD5 -text
 techstack-2007/os-independent/jboss-4.0.5.GA.zip -text
 techstack-2007/os-independent/jboss-4.0.5.GA.zip.MD5 -text
 techstack-2007/os-independent/jems-installer-1.2.0.GA.jar -text
