--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,8 @@ other/os-independent/hudson/violations.hpi -text
 other/os-independent/hudson/vmware.hpi -text
 other/os-independent/hudson/xvnc.hpi -text
 other/windows/svn-win32-1.4.6.zip -text
+techstack-2006/os-independent/apache-tomcat-5.5.17.zip -text
+techstack-2006/os-independent/apache-tomcat-5.5.17.zip.MD5 -text
 techstack-2006/os-independent/jakarta-tomcat-5.0.28.zip -text
 techstack-2006/os-independent/jakarta-tomcat-5.0.28.zip.MD5 -text
 techstack-2006/os-independent/jboss-4.0.4.GA.zip -text
