--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,8 @@ other/os-independent/hudson/svncompat13.hpi -text
 other/os-independent/hudson/violations.hpi -text
 other/os-independent/hudson/vmware.hpi -text
 other/os-independent/hudson/xvnc.hpi -text
+other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-lib-windows-i586-jre.exe -text
+other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux.zip -text
 other/windows/svn-win32-1.4.6.zip -text
 techstack-2006/os-independent/apache-tomcat-5.5.17.zip -text
 techstack-2006/os-independent/apache-tomcat-5.5.17.zip.MD5 -text
