--- a/.gitattributes
+++ b/.gitattributes
@@ -40,6 +40,7 @@ techstack-2007/os-independent/jboss-4.0.5.GA.zip.MD5 -text
 techstack-2007/os-independent/jems-installer-1.2.0.GA.jar -text
 techstack-2007/os-independent/jems-installer-1.2.0.GA.jar.MD5 -text
 techstack-2007/os-independent/jsch-0.1.34.jar -text
+techstack-2007/other/SDK4.zip -text
 techstack-2007/windows/jdk-1_5_0_10-windows-i586-p.exe -text
 techstack-2007/windows/mysql-5.0.27-win32.zip -text
 techstack-2008/os-independent/apache-tomcat-5.5.20.zip -text
