add the amd64 specific version of imageio.  make a copy of the existing jai_imageio-1_1-linux.zip as i586 presuming that this is the architecture its native lib is geared toward.
Former-commit-id: 5952b02b3b8a2c83259e3bbb1ed5746c920e60af

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,8 @@ other/os-independent/hudson/violations.hpi -text
 other/os-independent/hudson/vmware.hpi -text
 other/os-independent/hudson/xvnc.hpi -text
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-lib-windows-i586-jre.exe -text
+other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux-amd64.zip -text
+other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux-i586.zip -text
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux.zip -text
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-win.zip -text
 other/windows/cygwin.zip -text
