add version of windoze jai imageio with native support
Former-commit-id: a0ab79fc9d5b08b51d20d1ea436c6ab3fffe21f1

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-lib-windows
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux-amd64.zip -text
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux-i586.zip -text
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-linux.zip -text
+other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-win-native.zip -text
 other/os-independent/java_advanced_imaging_libraries/jai_imageio-1_1-win.zip -text
 other/windows/cygwin.zip -text
 other/windows/svn-win32-1.4.6.zip -text
