--- a/.gitattributes
+++ b/.gitattributes
@@ -51,5 +51,6 @@ techstack-2008/os-independent/apache-tomcat-5.5.20.zip.MD5 -text
 techstack-2008/os-independent/izpack-4.0.1-manual.pdf -text
 techstack-2008/os-independent/izpack-4.0.1.zip -text
 techstack-2008/os-independent/jboss-4.2.2.GA.zip -text
+techstack-2008/os-independent/jboss-4.2.2.GA.zip.MD5 -text
 techstack-2008/other/javapetstore-2.0-ea5.zip -text
 techstack-2008/windows/postgresql-8.3.3-1.zip -text
