--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,8 @@
 * text=auto !eol
+cacore-sdk/3.2.1/caCORE_SDK_321.zip -text
+cacore-sdk/4.0.1.1/caCORE_SDK_401-src.zip -text
+cacore-sdk/4.0/caCORE_SDK_40-src.zip -text
+cacore-sdk/4.1.1/caCORE_SDK_411-src.zip -text
 other/os-independent/class-dependecy-analyzer/pf-cda-1.10.zip -text
 other/os-independent/findbugs-1.3.4.zip -text
 other/os-independent/grails/grails-bin-1.0.2.zip -text
