--- a/.gitattributes
+++ b/.gitattributes
@@ -58,6 +58,7 @@ techstack-2008/os-independent/apache-tomcat-5.5.20.zip -text
 techstack-2008/os-independent/apache-tomcat-5.5.20.zip.MD5 -text
 techstack-2008/os-independent/izpack-4.0.1-manual.pdf -text
 techstack-2008/os-independent/izpack-4.0.1.zip -text
+techstack-2008/os-independent/izpack-4.3.zip -text
 techstack-2008/os-independent/jboss-4.2.2.GA.zip -text
 techstack-2008/os-independent/jboss-4.2.2.GA.zip.MD5 -text
 techstack-2008/other/javapetstore-2.0-ea5.zip -text
