--- a/.gitattributes
+++ b/.gitattributes
@@ -39,6 +39,7 @@ techstack-2006/os-independent/jboss-4.0.4.GA.zip.MD5 -text
 techstack-2006/os-independent/ws-core-enum-4.0.3.zip -text
 techstack-2006/os-independent/ws-core-enum-4.0.3.zip.MD5 -text
 techstack-2007/linux/jdk-1_5_0_10-linux-i586.bin -text
+techstack-2007/linux/jdk-1_5_0_19-linux-i586.rpm -text
 techstack-2007/os-independent/apache-ant-1.7.0-bin.zip -text
 techstack-2007/os-independent/apache-maven-2.0.8-bin.zip -text
 techstack-2007/os-independent/apache-tomcat-5.5.20.zip -text
