--- a/.gitattributes
+++ b/.gitattributes
@@ -66,3 +66,4 @@ techstack-2008/os-independent/jboss-4.2.2.GA.zip.MD5 -text
 techstack-2008/other/javapetstore-2.0-ea5.zip -text
 techstack-2008/windows/postgresql-8.3.3-1.zip -text
 techstack-2009/os-independent/apache-servicemix-3.3.zip -text
+techstack-2009/os-independent/apache-servicemix-3.3.zip.MD5 -text
