--- a/.gitattributes
+++ b/.gitattributes
@@ -68,4 +68,6 @@ techstack-2008/other/javapetstore-2.0-ea5.zip -text
 techstack-2008/windows/postgresql-8.3.3-1.zip -text
 techstack-2009/os-independent/apache-servicemix-3.3.zip -text
 techstack-2009/os-independent/apache-servicemix-3.3.zip.MD5 -text
+techstack-2009/os-independent/apache-tomcat-6.0.20.zip -text
+techstack-2009/os-independent/apache-tomcat-6.0.20.zip.MD5 -text
 techstack-2009/other/grails-bin-1.1.zip -text
