--- a/.gitattributes
+++ b/.gitattributes
@@ -70,4 +70,6 @@ techstack-2009/os-independent/apache-servicemix-3.3.zip -text
 techstack-2009/os-independent/apache-servicemix-3.3.zip.MD5 -text
 techstack-2009/os-independent/apache-tomcat-6.0.20.zip -text
 techstack-2009/os-independent/apache-tomcat-6.0.20.zip.MD5 -text
+techstack-2009/os-independent/jboss-5.1.0.GA.zip -text
+techstack-2009/os-independent/jboss-5.1.0.GA.zip.MD5 -text
 techstack-2009/other/grails-bin-1.1.zip -text
