--- a/.gitattributes
+++ b/.gitattributes
@@ -67,6 +67,7 @@ techstack-2008/os-independent/jboss-4.2.2.GA.zip -text
 techstack-2008/os-independent/jboss-4.2.2.GA.zip.MD5 -text
 techstack-2008/other/javapetstore-2.0-ea5.zip -text
 techstack-2008/windows/postgresql-8.3.3-1.zip -text
+techstack-2009/os-independent/apache-ant-1.7.1-bin.zip -text
 techstack-2009/os-independent/apache-servicemix-3.3.zip -text
 techstack-2009/os-independent/apache-servicemix-3.3.zip.MD5 -text
 techstack-2009/os-independent/apache-tomcat-6.0.20.zip -text
