Add nci sanctioned versions of dac
Former-commit-id: 79d546ca574c17d288b68362cc4ee2d215590a93

--- a/.gitattributes
+++ b/.gitattributes
@@ -88,4 +88,8 @@ techstack/approved/jboss-5.1.0.GA-nci-0.5.zip -text
 techstack/approved/jboss-5.1.0.GA-nci-0.5.zip.MD5 -text
 techstack/approved/jboss-5.1.0.GA-nci_0.3.zip -text
 techstack/approved/jboss-5.1.0.GA-nci_0.3.zip.MD5 -text
+techstack/approved/tomcat-5.5.27-nci-0.4.zip -text
+techstack/approved/tomcat-5.5.27-nci-0.4.zip.MD5 -text
+techstack/approved/tomcat-6.0.20-nci-0.1.zip -text
+techstack/approved/tomcat-6.0.20-nci-0.1.zip.MD5 -text
 techstack/readme.txt -text
