Commiting a new 4.1.2 source zip in response to a Jira Ticket 645: new patch release for caCORE SDK 4.1.2
Former-commit-id: 3cf4f93cb07b731ff0ea6d679cf47b731bcf1be5

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ cacore-sdk/3.2.1/caCORE_SDK_321.zip -text
 cacore-sdk/4.0.1.1/caCORE_SDK_401-src.zip -text
 cacore-sdk/4.0/caCORE_SDK_40-src.zip -text
 cacore-sdk/4.1.1/caCORE_SDK_411-src.zip -text
+cacore-sdk/4.1.2/caCORE_SDK_412-src.zip -text
 other/os-independent/class-dependecy-analyzer/pf-cda-1.10.zip -text
 other/os-independent/findbugs-1.3.4.zip -text
 other/os-independent/findbugs-1.3.8.zip -text
